# DSAProject2TriviaGame

./: CMakeLists.txt  README.md  package-lock.json
my-app/: index.html
my-app/src/: App.css  App.jsx  index.css
src/: implementation into website.txt  main.cpp  package.json  question.cpp  question.h  questions.txt  server.js  sort.cpp  sort.h
